docs: fixed some wrong swagger documentation
